styles/experience.css
/*BODY SECTION*/

@import url('https://fonts.googleapis.com/css2?family=Monoton&family=Ubuntu:wght@300;400;500;700&display=swap');

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Ubuntu', sans-serif;
    background: #2a2b32;
}

/*HEADER*/

header {
    letter-spacing: 1px;
    line-height: 30px;
    text-align: center;
  }

  header h1 {
    color: #fff;
  }

  header h4 {
    color: #ffffff70;
  }

/* BACKGROUND EFFECTS */

canvas{
    height: 100vh;
    z-index: -100000;
    position: fixed;
    top: 0px;
}

/* NAVIGATION */

ul{
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    box-shadow: 0 5px 25px rgba(0,0,0,0.25);
    background: rgba(5, 6, 6, 0.139);
}

ul li {
    list-style: none;
}

ul li a {
    position: relative;
    color: #fff;
    display: inline-block;
    padding: 20px 30px;
    z-index: 1000;
    backdrop-filter: blur(15px);
}

ul li a ion-icon {
    font-size: 2.5em;
    pointer-events: none;
    opacity: 0.25;
    transition: 0.25s;
}

ul li:active a ion-icon {
    opacity: 1;
}

#marker {
    position: absolute;
    top: 0;
    transition: 0.5s;
    z-index: 1;;
}

#marker::before{
    content: '';
    position: absolute;
    top: -10px;
    left: 50%;
    transform: translateX(-50%);
    width: 50px;
    height: 40px;
    border-radius: 8px;
}

ul li:nth-child(1).active ~ #marker::before {
    background: #90dfff;
    box-shadow: 0 0 15px #90dfff, 0 0 30px #90dfff, 0 0 45px #90dfff, 0 0 60px #90dfff;
}  

ul li:nth-child(2).active ~ #marker::before {
    background: #90dfff;
    box-shadow: 0 0 15px #90dfff, 0 0 30px #90dfff, 0 0 45px #90dfff, 0 0 60px #90dfff;
} 

ul li:nth-child(3).active ~ #marker::before {
    background: #90dfff;
    box-shadow: 0 0 15px #90dfff, 0 0 30px #90dfff, 0 0 45px #90dfff, 0 0 60px #90dfff;
} 

ul li:nth-child(4).active ~ #marker::before {
  background: #90dfff;
  box-shadow: 0 0 15px #90dfff, 0 0 30px #90dfff, 0 0 45px #90dfff, 0 0 60px #90dfff;
} 

/* CENTRAL CONTAINER */

.container {
    position: absolute;
    top: 20vh;
    left: 50%;
    transform: translateX(-50%);
	width: 53vw;
	height: 63vh;
    background: rgba(5, 6, 6, 0.139);
  	border-radius: 16px;
	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
	backdrop-filter: blur(11.6px);
	-webkit-backdrop-filter: blur(11.6px);
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 50px 50px 100px 50px;
}

/* EXPERIENCE SECTION */
#experience {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.experience-containers {
    display: flex;
    justify-content: center;
    margin-bottom: 10px;
    width: 100%;
    margin-bottom: 2em;
    margin-top: 3em;
}


.details-container {
    padding: 1.5rem 1.5rem; 
    background: rgba(255, 255, 255, 0.122);
    border-radius: 2rem;
    border: rgb(53, 53, 53) 0.1rem solid;
    border-color: #7178a2;
    text-align: center;
    color: #fff;
    width: 45%;
}

.backend {
    margin-left: 4%;
}

.experience-sub-title {
    color: #ffffff70;
    font-weight: 600;
    font-size: 1.75rem;
    margin-bottom: 2rem;
  }

  .article-container {
    display: flex;
    text-align: initial;
    flex-wrap: wrap;
    gap: 2rem;
    justify-content: space-around;
  }

  article {
    display: flex;
    width: 10rem;
    justify-content: space-around;
    gap: 0.5rem;

  }
  
  article .icon {
    cursor: default;
    height: 2rem;
  }

  article div {
    width: 100%;
  }

  @media screen and (max-width: 1874px) {
    .container{
      height: auto;
    }
  }
  

  @media screen and (max-width: 1200px) {
    .container{
      width: 85vw;
    }
  }

  @media screen and (max-width: 660px) {
    .experience-containers {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .details-container {
        width: 90%;
    }
    .backend {
        margin-left: 0;
        margin-top: 2em;
    }
  }
  
  @media screen and (max-width: 320px) {
    .container{
      width: 95vw;
    }

  }

